info_page/static/info_page/style.css
/*
 * Main block
 */
div.main-block {
	margin-left: 25%;
	margin-right: 25%;
}

@media all and (max-width: 640px) {
	div.main-block {
		margin-left: auto;
		margin-right: auto;
		width: 100%;
	}
}

@media all and (max-width: 400px) {
	img.avatar {
		width: 80%;
	}
}

a {
	text-decoration: none;
	color: #0060B6;
}

a:hover {
	text-decoration: underline;
	color: #0060B6;
}


/*
 * Avatar
 */
img.avatar {
	display: block;
	margin: auto;
	width: 320px;
}

img.circle {
	border-radius: 50%;
}


/*
 * Nav bar
 */
div.nav-links {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row wrap;
	justify-content: space-around;
}

a.nav-item {
	flex: 1;
	text-align: center;
	font-family: Bitter, serif;
}

a.nav-item.active {
	font-weight: bold;
	text-decoration: underline;
}


/*
 * Sections
 */
div.sections {
	padding-left: 10%;
	padding-right: 8%;
	font-family: Lato, serif;
}

div.section {
	display: none;
	width: 100%;
}

div.section.active {
	display: inline-block;
}


/*
 * Projects section
 */
ul.project-list {
	width: 100%;
	padding-left: 0;
	list-style: none;
}

li.project {
	width: 100%;
	margin-bottom: 10px;
}

li.project div,ul {
	display: block;
	margin-left: 4%;
	margin-right: 4%;
}

li.project .project-title {
	font-size: large;
	margin-left: 0%;
}

li.project div.project-summary {
	margin-bottom: 5px;
}

li.project ul.project-awards {
	list-style: none;
}


/*
 * Bio section
 */
div.section#bio div.container {
	margin-left: 4%;
	margin-right: 4%;
}

div.section#bio div.container div {
	margin-bottom: 20px;
}

div.section#bio div.container div ul {
	list-style: none;
}

div.section#bio div.container div ul li {
	margin-bottom: 10px;
}

/*
 * Footer
 */
div.footer {
	text-align: center;
	font-size: 8pt;
	position: relative;

	margin-bottom: 10px;
}

div.footer div.social-links {
	display: block;
	position: absolute;
	top: 0;
	right: 20px;

	height: 100%;
}

div.footer div.social-links a img {
	height: 100%;
}

